--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource/ibm-plex-mono": "^4.5.12",
+    "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^1.3.7",
     "next": "12.3.1",
