--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@fontsource/ibm-plex-mono": "^4.5.12",
+    "@vercel/og": "^0.0.18",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^1.3.7",
+    "lodash-es": "^4.17.21",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
