--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@fontsource/ibm-plex-mono": "^4.5.12",
+    "@react-spring/three": "^9.5.5",
+    "@react-three/drei": "^9.34.4",
+    "@react-three/fiber": "^8.8.10",
     "@vercel/og": "^0.0.18",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
@@ -19,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spring": "^9.5.5",
+    "three": "^0.145.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
