--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-spring/three": "^9.5.5",
     "@react-three/drei": "^9.34.4",
     "@react-three/fiber": "^8.8.10",
+    "@types/three": "^0.144.0",
     "@vercel/og": "^0.0.18",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
