--- a/package.json
+++ b/package.json
@@ -1,41 +1,45 @@
 {
-  "name": "zone-time",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@fontsource/ibm-plex-mono": "^4.5.12",
-    "@vercel/og": "^0.0.18",
-    "clsx": "^1.2.1",
-    "date-fns": "^2.29.3",
-    "date-fns-tz": "^1.3.7",
-    "lodash-es": "^4.17.21",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-spring": "^9.5.5",
-    "zod": "^3.18.0"
-  },
-  "devDependencies": {
-    "@types/lodash-es": "^4.17.6",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6",
-    "typescript": "4.7.4"
-  },
-  "ct3aMetadata": {
-    "initVersion": "6.0.0-next.62e86c4"
-  }
+    "name": "zone-time",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "build": "next build",
+        "dev": "next dev",
+        "lint": "next lint",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@fontsource/ibm-plex-mono": "^4.5.12",
+        "@react-spring/three": "^9.5.5",
+        "@react-three/drei": "^9.34.4",
+        "@react-three/fiber": "^8.8.10",
+        "@vercel/og": "^0.0.18",
+        "clsx": "^1.2.1",
+        "date-fns": "^2.29.3",
+        "date-fns-tz": "^1.3.7",
+        "lodash-es": "^4.17.21",
+        "next": "12.3.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "three": "^0.145.0",
+        "zod": "^3.18.0"
+    },
+    "devDependencies": {
+        "@types/lodash-es": "^4.17.6",
+        "@types/node": "18.0.0",
+        "@types/react": "18.0.14",
+        "@types/react-dom": "18.0.5",
+        "@types/three": "^0.144.0",
+        "@typescript-eslint/eslint-plugin": "^5.33.0",
+        "@typescript-eslint/parser": "^5.33.0",
+        "autoprefixer": "^10.4.7",
+        "eslint": "8.22.0",
+        "eslint-config-next": "12.3.1",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.6",
+        "typescript": "4.7.4"
+    },
+    "ct3aMetadata": {
+        "initVersion": "6.0.0-next.62e86c4"
+    }
 }
