--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "clsx": "^1.2.1",
         "date-fns": "^2.29.3",
         "date-fns-tz": "^1.3.7",
+        "jotai": "^1.8.5",
         "lodash-es": "^4.17.21",
         "next": "12.3.1",
         "react": "18.2.0",
