--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@fontsource/ibm-plex-mono": "^4.5.12",
+        "@headlessui/react": "^1.7.3",
         "@react-spring/three": "^9.5.5",
         "@react-three/drei": "^9.34.4",
         "@react-three/fiber": "^8.8.10",
