--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@fontsource/ibm-plex-mono": "^4.5.12",
         "@headlessui/react": "^1.7.3",
         "@react-spring/three": "^9.5.5",
+        "@react-spring/web": "^9.5.5",
         "@react-three/drei": "^9.34.4",
         "@react-three/fiber": "^8.8.10",
         "@vercel/og": "^0.0.18",
