--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "dependencies": {
         "@fontsource/ibm-plex-mono": "^4.5.12",
         "@headlessui/react": "^1.7.3",
+        "@radix-ui/react-icons": "^1.1.1",
+        "@radix-ui/react-popover": "^1.0.2",
         "@react-spring/three": "^9.5.5",
+        "@react-spring/web": "^9.5.5",
         "@react-three/drei": "^9.34.4",
         "@react-three/fiber": "^8.8.10",
         "@vercel/og": "^0.0.18",
